# Notes

./: README.md
c++/: CMakeLists.txt  README.md
c++/codes/Basics of C++/: IO.cpp  assignment.cpp  cin.cpp  compound.cpp  conditional.cpp  constants.cpp  declaration.cpp  definitions.cpp  initalization.cpp  myfirst.cpp  mysecond.cpp  mystring.cpp  stringstream.cpp
c++/codes/Classes/: abstract base class.cpp  classesI1.cpp  classesI2.cpp  classesI3.cpp  classesI4.cpp  classesI5.cpp  classesI6.cpp  classesI7.cpp  classesII10.cpp  classesII11.cpp  classesII12.cpp  classesII13.cpp  classesII14.cpp  classesII15.cpp  classesII16.cpp  classesII8.cpp  classesII9.cpp  constructors and derived classes.cpp  copy constructor.cpp  default constructors.cpp  derived class.cpp  destructors.cpp  dynamic allocation and polymorphism.cpp  friend class.cpp  friend functions.cpp  implicit members.cpp  move constructor.cpp  multiple inheritance.cpp  pointers to base class.cpp  pure virtual members.cpp  virtual members.cpp
c++/codes/Compound data types/: NTCS.cpp  arrays as para.cpp  arrays.cpp  first pointer.cpp  increaser.cpp  more pointers.cpp  pointer as arg.cpp  pointer to func.cpp  rememb-o-matic.cpp  structures1.cpp  structures2.cpp  structures3.cpp
c++/codes/Other language features/: bad_alloc.cpp  class type-casting.cpp  const_cast.cpp  dynamic_cast.cpp  exceptions.cpp  explicit.cpp  function macro.cpp  implicit conversion classes.cpp  standard exceptions.cpp  standard macro names.cpp  typeid.cpp  typeid2.cpp
c++/codes/Program structure/: break.cpp  continue.cpp  declaring.cpp  (+22 more)
(+60 files in other folders)
